Simplified resource reading